sandc/test/fixtures/astRegression/shouldSucceed/productions/statement/DoWhileStatement.sand
pub class DoWhileStatement {
    foo() {
        do {

        } while cond;
        
        do {
            foo();
        } while cond;
    }
}