sandc/test/fixtures/astRegression/shouldFail/productions/statement/DoCond.sand
pub class DoCond {
    foo() {
        do cond {

        } while cond;
    }
}